more work adding things to the header and fixing spacing and rythm

--- a/public/_scss/_base.scss
+++ b/public/_scss/_base.scss
@@ -3,7 +3,7 @@
   padding-left: .5em;
   padding-right: .5em;
   margin-bottom: 2em;
-  max-width: 786px;
+  max-width: 1024px;
   line-height: 1.5;
   margin: 0 auto 2em;
   
