--- a/public/_scss/_postentry.scss
+++ b/public/_scss/_postentry.scss
@@ -2,5 +2,6 @@
   &__title {
     font-size: 2em;
     line-height: 1.3;
+    margin-bottom: .25em;
   }
 }
