--- a/public/_scss/_teaser.scss
+++ b/public/_scss/_teaser.scss
@@ -2,7 +2,7 @@
   padding: 0.5em 1.25em 1.25em 1.25em;
   
   &__title {
-    
+    margin-bottom: .25em
   }
   &:hover {
     background: #f7f7f7;
